# SaiThumbs

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: ci.yml
include/: ClassFactory.hpp  Config.hpp  Globals.hpp  Macros.hpp  Sai1ThumbProvider.hpp  Sai2ThumbProvider.hpp  SaiThumbProvider.hpp  ThumbnailProviderClassFactory.hpp  stb_image.h  stb_image_resize.h  stb_image_resize2.h
source/: ClassFactory.cpp  Globals.cpp  Sai1ThumbProvider.cpp  Sai2ThumbProvider.cpp  SaiThumbProvider.cpp  SaiThumbs.def  main.cpp  stb_image_resize.c  stb_image_resize2.c  version.rc  version.rc.in
tests/: comtest.cpp
